[package]
name = "warp_test"
version = "0.1.0"
authors = ["Audun Halland <audun.halland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.1"
tokio = "0.1.14"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
